[package]
name = "rust-otp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = { version = "0.12.1" }
sha1 = { version = "0.10.5" }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.6" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "gen"
harness = false
